contrast prob fixed 7th

--- a/home_page.css
+++ b/home_page.css
@@ -1,9 +1,7 @@
-.introofmetal {
-    background-color: black;
-    width: auto;
-}
 h1 {
     color:whitesmoke;
+    background-color: black;
+    width: auto;
     text-shadow: 2px 2px 20px blueviolet;
     font-size: 3em;
     text-align: center;
